정영식 수정사항 2023-12-05 v5